# TrackingRobot

./: .gitignore  README.md  robot.py
arduino/robot/: robot.ino
c++/: CMakeLists.txt  main.cpp  objectDetection2.cpp
python/: robot.py
